@@ -31,8 +31,6 @@
 #include "registry/makejnpacket.h"
 #include "engine/packet/NJNIPacket.h"
 
-#include <strstream>
-
 JNIEXPORT jobject JNICALL
         Java_normal_engine_implementation_jni_packet_NJNIPacket_clonePacket
         (JNIEnv *env, jobject me, jboolean cloneDescendants, jboolean end) {
